Importing web template

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Digian</title>
+  <title>Code Commerce Ltd</title>
 
 
   <!-- bootstrap core css -->
@@ -37,7 +37,8 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Digian
+              <img src="">
+              Code Commerce Ltd
             </span>
           </a>
 
