--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
               <h4>
-                Digian
+                Code Commerce Ltd
               </h4>
               <p>
                 Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
