Importing web template

--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,11 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="quote_btn-container">
-              <a href="" class="quote_btn">
-                Get A Quote
-              </a>
-            </div>
+<!--            <div class="quote_btn-container">-->
+<!--              <a href="" class="quote_btn">-->
+<!--                Get A Quote-->
+<!--              </a>-->
+<!--            </div>-->
           </div>
         </nav>
       </div>
@@ -130,7 +130,7 @@
                 Code Commerce Ltd
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Your trusted partner in the ever-evolving world of e-commerce
               </p>
             </div>
           </div>
@@ -187,7 +187,7 @@
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    support@codecommerceltd.com
                   </span>
                 </a>
               </div>
@@ -217,8 +217,8 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved
+<!--          <a href="https://html.design/">Free Html Templates</a>-->
         </p>
       </div>
     </footer>
