--- a/service.html
+++ b/service.html
@@ -60,11 +60,11 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="quote_btn-container">
-              <a href="" class="quote_btn">
-                Get A Quote
-              </a>
-            </div>
+<!--            <div class="quote_btn-container">-->
+<!--              <a href="" class="quote_btn">-->
+<!--                Get A Quote-->
+<!--              </a>-->
+<!--            </div>-->
           </div>
         </nav>
       </div>
@@ -72,7 +72,7 @@
     <!-- end header section -->
   </div>
 
-  <!-- service section -->
+   <!-- service section -->
   <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container">
@@ -80,7 +80,7 @@
           Our Services
         </h2>
         <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          At Code Commerce Ltd., we specialize in providing comprehensive e-commerce solutions designed to help you achieve exponential growth and maximize profits. Whether you're an entrepreneur looking to scale your business or a brand aiming to expand your online presence, we’ve got you covered.
         </p>
       </div>
       <div class="row">
@@ -91,16 +91,16 @@
             </div>
             <div class="detail-box">
               <h5>
-                Link Building
+                Account Management
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Managing e-commerce accounts across multiple platforms can be time-consuming and complex. That’s where we come in! Our expert team handles every aspect of your Amazon, eBay, Facebook, and Shopify accounts on your behalf. From product listings to customer engagement, we ensure your accounts are optimized for success.
               </p>
               <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
               </a>
             </div>
           </div>
@@ -112,16 +112,16 @@
             </div>
             <div class="detail-box">
               <h5>
-                On page SEO
+                Sales Growth Optimization
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                We employ cutting-edge strategies and data-driven insights to drive sales and boost your profits. Our team constantly monitors performance metrics to identify opportunities for growth and implement the best practices to capitalize on them.
               </p>
               <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
               </a>
             </div>
           </div>
@@ -133,16 +133,20 @@
             </div>
             <div class="detail-box">
               <h5>
-                Online Marketing
+                Marketing and Promotions
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                We develop tailored marketing campaigns that highlight your products and reach the right audience. Our strategies include:
+
+                1. Eye-catching product descriptions and images.
+                2. Promotions, discounts, and offers to attract buyers.
+                3. Social media advertising and engagement.
               </p>
               <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
               </a>
             </div>
           </div>
@@ -150,33 +154,215 @@
         <div class="col-md-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/s4.png" alt="">
+              <img src="images/inventory_checklist.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Email Marketing
+                Inventory Management
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Never lose a sale due to out-of-stock items. We manage your inventory meticulously, ensuring your products are always available to meet demand.
               </p>
               <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
               </a>
             </div>
           </div>
         </div>
+<!--      </div>-->
+<!--      <div class="btn-box">-->
+<!--        <a href="">-->
+<!--          View More-->
+<!--        </a>-->
+<!--      </div>-->
+
+<!--&lt;!&ndash;      &ndash;&gt;-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-6 col-lg-3">-->
+<!--          <div class="box">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/s1.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Customer Service-->
+<!--              </h5>-->
+<!--              <p>-->
+<!--                Happy customers mean better business. We handle all customer interactions, from inquiries to post-sale support, ensuring a positive shopping experience that builds loyalty and trust.-->
+<!--              </p>-->
+<!--              <a href="">-->
+<!--&lt;!&ndash;                <span>&ndash;&gt;-->
+<!--&lt;!&ndash;                  Read More&ndash;&gt;-->
+<!--&lt;!&ndash;                </span>&ndash;&gt;-->
+<!--&lt;!&ndash;                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>&ndash;&gt;-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--&lt;!&ndash;      &ndash;&gt;-->
+<!--        &lt;!&ndash;      &ndash;&gt;-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-6 col-lg-3">-->
+<!--          <div class="box">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/s1.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Profitability Analysis-->
+<!--              </h5>-->
+<!--              <p>-->
+<!--                We don’t just grow your business; we ensure it grows profitably. Our team performs detailed profitability analyses to identify what works best for your brand and fine-tunes your operations to deliver maximum returns.-->
+<!--              </p>-->
+<!--              <a href="">-->
+<!--&lt;!&ndash;                <span>&ndash;&gt;-->
+<!--&lt;!&ndash;                  Read More&ndash;&gt;-->
+<!--&lt;!&ndash;                </span>&ndash;&gt;-->
+<!--&lt;!&ndash;                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>&ndash;&gt;-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--&lt;!&ndash;      &ndash;&gt;-->
+<!--        &lt;!&ndash;      &ndash;&gt;-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-6 col-lg-3">-->
+<!--          <div class="box">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/s1.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Exponential Growth-->
+<!--              </h5>-->
+<!--              <p>-->
+<!--                With our expertise and dedication, we’ve helped countless businesses achieve exponential growth in record time. By optimizing every aspect of your online presence, we ensure you stay ahead of the competition and reach your full potential.-->
+<!--              </p>-->
+<!--              <a href="">-->
+<!--&lt;!&ndash;                <span>&ndash;&gt;-->
+<!--&lt;!&ndash;                  Read More&ndash;&gt;-->
+<!--&lt;!&ndash;                </span>&ndash;&gt;-->
+<!--&lt;!&ndash;                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>&ndash;&gt;-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      -->
       </div>
-      <div class="btn-box">
-        <a href="">
-          View More
-        </a>
+    </div>
+  </section>
+  <!-- end service section 1 -->
+
+<!--  --------------------------------------------------------------------------------------------------------   -->
+   <!-- service section -->
+  <section class="service_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+<!--        <h2>-->
+<!--          Our Services-->
+<!--        </h2>-->
+<!--        <p>-->
+<!--          At Code Commerce Ltd., we specialize in providing comprehensive e-commerce solutions designed to help you achieve exponential growth and maximize profits. Whether you're an entrepreneur looking to scale your business or a brand aiming to expand your online presence, we’ve got you covered.-->
+<!--        </p>-->
+<!--      </div>-->
+      <div class="row">
+        <div class="col-md-6 col-lg-3">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/support.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Customer Service
+              </h5>
+              <p>
+                Happy customers mean better business. We handle all customer interactions, from inquiries to post-sale support, ensuring a positive shopping experience that builds loyalty and trust.
+              </p>
+              <a href="">
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/profit.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Profitability Analysis
+              </h5>
+              <p>
+                We don’t just grow your business; we ensure it grows profitably. Our team performs detailed profitability analyses to identify what works best for your brand and fine-tunes your operations to deliver maximum returns.
+              </p>
+              <a href="">
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/growth.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+               Exponential Growth
+              </h5>
+              <p>
+                With our expertise and dedication, we’ve helped countless businesses achieve exponential growth in record time. By optimizing every aspect of your online presence, we ensure you stay ahead of the competition and reach your full potential.
+              </p>
+              <a href="">
+<!--                <span>-->
+<!--                  Read More-->
+<!--                </span>-->
+<!--                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>-->
+              </a>
+            </div>
+          </div>
+        </div>
+<!--        <div class="col-md-6 col-lg-3">-->
+<!--          <div class="box">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/inventory_checklist.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Inventory Management-->
+<!--              </h5>-->
+<!--              <p>-->
+<!--                Never lose a sale due to out-of-stock items. We manage your inventory meticulously, ensuring your products are always available to meet demand.-->
+<!--              </p>-->
+<!--              <a href="">-->
+<!--&lt;!&ndash;                <span>&ndash;&gt;-->
+<!--&lt;!&ndash;                  Read More&ndash;&gt;-->
+<!--&lt;!&ndash;                </span>&ndash;&gt;-->
+<!--&lt;!&ndash;                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>&ndash;&gt;-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="btn-box">-->
+<!--        <a href="">-->
+<!--          View More-->
+<!--        </a>-->
       </div>
     </div>
   </section>
   <!-- end service section -->
+<!--  ---------------------------------------------------------------------------------------------------------  -->
 
 
   <div class="footer_container">
@@ -191,7 +377,7 @@
                 Code Commerce Ltd
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Your trusted partner in the ever-evolving world of e-commerce
               </p>
             </div>
           </div>
@@ -248,7 +434,7 @@
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    support@codecommerceltd.com
                   </span>
                 </a>
               </div>
@@ -278,8 +464,8 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved
+<!--          <a href="https://html.design/">Free Html Templates</a>-->
         </p>
       </div>
     </footer>
