--- a/about.html
+++ b/about.html
@@ -60,11 +60,11 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="quote_btn-container">
-              <a href="" class="quote_btn">
-                Get A Quote
-              </a>
-            </div>
+<!--            <div class="quote_btn-container">-->
+<!--              <a href="" class="quote_btn">-->
+<!--                Get A Quote-->
+<!--              </a>-->
+<!--            </div>-->
           </div>
         </nav>
       </div>
@@ -85,14 +85,21 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              Welcome to Code Commerce Ltd., your trusted partner in the ever-evolving world of e-commerce. We are a dynamic team of experts passionate about helping businesses thrive in the digital marketplace. With years of experience and a proven track record, we empower entrepreneurs and brands to unlock their full potential across platforms like Amazon, eBay, Facebook, and Shopify.
             </p>
-            <a href="">
-              Read More
-            </a>
+<!--            <a href="">-->
+<!--              Read More-->
+<!--            </a>-->
+
+<!--            <h2>-->
+<!--                Who We Are-->
+<!--              </h2>-->
+<!--            </div>-->
+<!--            <p>-->
+<!--              At Code Commerce Ltd., we believe that e-commerce isn’t just about selling products—it’s about creating seamless shopping experiences, building customer trust, and driving meaningful growth. Our journey began with a simple vision: to simplify online selling while maximizing profitability for businesses of all sizes.-->
+
+<!--              Today, we proudly manage accounts for a diverse range of clients, offering tailored strategies and hands-on expertise that deliver measurable results.-->
+<!--            </p>-->
           </div>
         </div>
         <div class="col-md-6 ">
@@ -101,10 +108,124 @@
           </div>
         </div>
 
+        <h2>
+          Who We Are
+        </h2>
+            </div>
+            <p>
+              At Code Commerce Ltd., we believe that e-commerce isn’t just about selling products—it’s about creating seamless shopping experiences, building customer trust, and driving meaningful growth. Our journey began with a simple vision: to simplify online selling while maximizing profitability for businesses of all sizes.
+
+              Today, we proudly manage accounts for a diverse range of clients, offering tailored strategies and hands-on expertise that deliver measurable results.
+            </p>
+
+<!--      <h2>-->
+<!--          What We Do-->
+<!--        </h2>-->
+<!--            </div>-->
+<!--            <p>-->
+<!--              We specialize in managing e-commerce accounts and providing end-to-end solutions to help our clients succeed. From setting up and optimizing your storefront to driving sales and handling customer interactions, we take care of it all so you can focus on growing your business.-->
+
+<!--              Our services include:-->
+<!--              -->
+<!--              Comprehensive account management.-->
+<!--              Strategic marketing and promotions.-->
+<!--              Inventory and order management.-->
+<!--              Customer support excellence.-->
+<!--              -->
+<!--              Our mission is simple: To help you achieve exponential growth and lasting success in the competitive world of online retail.-->
+<!--            </p>-->
+
+
+
       </div>
     </div>
   </section>
 
+<!--  -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+
+  <section class="about_section layout_padding layout_margin">
+    <div class="container  ">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                What We Do
+              </h2>
+            </div>
+            <p>
+              We specialize in managing e-commerce accounts and providing end-to-end solutions to help our clients succeed. From setting up and optimizing your storefront to driving sales and handling customer interactions, we take care of it all so you can focus on growing your business.
+
+              Our services include:
+
+              Comprehensive account management.
+              Strategic marketing and promotions.
+              Inventory and order management.
+              Customer support excellence.
+
+              Our mission is simple: To help you achieve exponential growth and lasting success in the competitive world of online retail.
+            </p>
+
+          </div>
+        </div>
+        <div class="col-md-6 ">
+          <div class="img-box">
+            <img src="images/about-img.png" alt="">
+          </div>
+        </div>
+
+        <h2>
+          Why Choose Us?
+        </h2>
+            </div>
+            <p>
+              Expertise You Can Trust: With deep knowledge of e-commerce platforms, we know what it takes to stand out and succeed.
+              Results-Driven Approach: We focus on strategies that deliver real, measurable growth and profitability.
+              Customer-Centric Values: Your success is our success. We prioritize transparency, communication, and customer satisfaction in everything we do.
+            </p>
+      </div>
+    </div>
+  </section>
+
+   <section class="about_section layout_padding layout_margin">
+    <div class="container  ">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+<!--              <h2>-->
+<!--                What We Do-->
+<!--              </h2>-->
+            </div>
+            <p>
+              At Code Commerce Ltd., we’re more than just a service provider—we’re your growth partner. Join us on a journey to redefine your e-commerce success story.
+
+              Let’s Grow Together!
+              Have questions or ready to get started? Contact Us today and discover how we can take your business to the next level.
+            </p>
+
+          </div>
+        </div>
+<!--        <div class="col-md-6 ">-->
+<!--          <div class="img-box">-->
+<!--            <img src="images/about-img.png" alt="">-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <h2>-->
+<!--          Why Choose Us?-->
+<!--        </h2>-->
+<!--            </div>-->
+<!--            <p>-->
+<!--              Expertise You Can Trust: With deep knowledge of e-commerce platforms, we know what it takes to stand out and succeed.-->
+<!--              Results-Driven Approach: We focus on strategies that deliver real, measurable growth and profitability.-->
+<!--              Customer-Centric Values: Your success is our success. We prioritize transparency, communication, and customer satisfaction in everything we do.-->
+<!--            </p>-->
+      </div>
+    </div>
+  </section>
+
+<!--  &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
   <!-- end about section -->
 
   <div class="footer_container">
@@ -119,7 +240,7 @@
                 Code Commerce Ltd
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Your trusted partner in the ever-evolving world of e-commerce
               </p>
             </div>
           </div>
@@ -176,7 +297,7 @@
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    support@codecommerceltd.com
                   </span>
                 </a>
               </div>
@@ -206,8 +327,8 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved
+<!--          <a href="https://html.design/">Free Html Templates</a>-->
         </p>
       </div>
     </footer>
