Importing web template

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       Our mission is to empower businesses and individuals by providing top-notch e-commerce solutions that simplify online selling and buying. We believe in building connections, delivering quality, and exceeding expectations every step of the way.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
                     </div>
@@ -148,7 +148,7 @@
                       Recognition for consistent quality and customer satisfaction.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
                     </div>
