Importing web template

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                   <div class="img-box">
 <!--                    <img src="images/slider-img.png" alt="">-->
-                    <img src="images/CodeCommerceLogo.png" alt="">
+                    <img src="images/CC_logo.png" alt="">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -107,7 +107,7 @@
                 <div class="col-md-6">
                   <div class="img-box">
 <!--                    <img src="images/slider-img.png" alt="">-->
-                    <img src="images/CodeCommerceLogo.png" alt="">
+                    <img src="images/CC_logo_basket.png" alt="">
                   </div>
                 </div>
                 <div class="col-md-6">
